--- a/config/database.yml
+++ b/config/database.yml
@@ -17,14 +17,14 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
-  username: postgres
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
+  host: db
+  username: postgres
   database: reductor_development
 
   # The specified database role being used to connect to postgres.
@@ -59,6 +59,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  host: db
+  username: postgres
   database: reductor_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
@@ -82,6 +84,4 @@ test:
 #
 production:
   <<: *default
-  database: reductor_production
-  username: reductor
-  password: <%= ENV['REDUCTOR_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
