--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,11 @@ services:
     image: postgres
     volumes:
       - postgres_database:/var/lib/postgresql/data
+  redis:
+    image: 'redis:4.0-alpine'
+    command: redis-server
+    ports:
+      - "6379:6379"
   web:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
@@ -13,6 +18,21 @@ services:
       - "3000:3000"
     depends_on:
       - db
+      - sidekiq
+      - redis
+    env_file:
+      - .env
+  sidekiq:
+    depends_on:
+      - db
+      - redis
+    build: .
+    command: bundle exec sidekiq
+    volumes:
+      - .:/myapp
+    env_file:
+      - .env
+
 volumes:
   postgres_database:
     external: true
